--- a/wisharebootstrap/index.html
+++ b/wisharebootstrap/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <nav class="navbar navbar-expand-lg fixed-top ">
-	  <a class="navbar-brand" href="#">Home</a>
+	  <a class="navbar-brand" href="#">WiShare</a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
 	  </button>
@@ -21,15 +21,16 @@
 	      <li class="nav-item">
 	        <a class="nav-link " data-value="try" href="#">Try it</a>
 	      </li>
+			<li class="nav-item">
+				<a class="nav-link " data-value="support" href="#">Support</a>
+			</li>
 	      <li class="nav-item">
 	        <a class="nav-link " data-value="docs" href="#">Documentation</a>
 	      </li>
 	      <li class="nav-item">
 	        <a class="nav-link " data-value="team" href="#">Meet us</a>
 	      </li>
-	      <li class="nav-item">
-	        <a class="nav-link " data-value="support" href="#">Support</a>
-	      </li>
+
 			<li class="nav-item">
 				<a class="nav-link " data-value="contact" href="#">Contact Us</a>
 			</li>
@@ -58,9 +59,9 @@
 <div class="about" id="about">
 	<div class="container">
 	  <h1 class="text-center">- About -</h1>
-		<div class="row">
-			<div style="border-radius: 50%; background-color: #4c4c4c; margin: 0 auto">
-				<img src="https://i.imgur.com/OXlMnRp.png" style="width: 300px; height: 300px">
+		<div class="row" style="height: 350px">
+			<div style="border-radius: 50%; background-color: #4c4c4c; margin: 0 auto; width: 340px">
+				<img src="https://i.imgur.com/OXlMnRp.png" style="width: 300px; height: 300px; padding-top: 45px; padding-left: 45px">
 			</div>
 			<div class="col-lg-8 col-md-8 col-sm-12 desc">
 				<h3>At Wishare, our goal is to make the process of connecting to WiFi as simple as possible.
@@ -84,7 +85,17 @@
 </div>
 
 
-<!-- Posts section -->
+<div class="support" id="support">
+	<div class="container">
+		<h1 class="text-center">- Support -</h1>
+		<div class="row">
+			<div class="col-lg-4 col-md-4 col-sm-12">
+				<h1>STUFF HERE</h1>
+			</div>
+		</div>
+	</div>
+</div>
+
 <div class="docs" id="docs">
 	<div class="container">
 	<h1 class="text-center">- Documentation -</h1>
@@ -101,46 +112,43 @@
 		<div class="row">
 			<div class="col-lg-3 col-md-3 col-sm-12 item">
 				<img src="https://i.imgur.com/jSexjnI.jpg" class="img-fluid" alt="team">
-				<div class="des">
-				 	Jacob Fullmer
-				 </div>
+				<a href="https://www.linkedin.com/in/jacob-fullmer">
+					<div class="des">
+						Jacob Fullmer
+					 </div>
+				</a>
 				<span class="text-muted">Lead UI Developer</span>
 			</div>
 			<div class="col-lg-3 col-md-3 col-sm-12 item">
 				<img src="https://i.imgur.com/sZEv0fg.jpg" style="height: 339.57px; width: 255px" alt="team">
-				<div class="des">
-				 	 Eric Pratt
-				 </div>
+				<a href="https://github.com/pratted">
+					<div class="des">
+						 Eric Pratt
+					 </div>
+				</a>
 				<span class="text-muted">Lead Server Developer</span>
 			</div>
 			<div class="col-lg-3 col-md-3 col-sm-12 item">
 				<img src="https://i.imgur.com/fjOqzng.jpg" style="height: 339.57px; width: 255px" alt="team">
-				<div class="des">
-				 	Joe Vu
-				 </div>
+				<a href="https://www.linkedin.com/in/joseph-vu-74a1ba169/">
+					<div class="des">
+						Joseph Vu
+					 </div>
+				</a>
 				<span class="text-muted">Lead SQL Developer</span>
 			</div>
 			<div class="col-lg-3 col-md-3 col-sm-12 item">
 				<img src="https://i.imgur.com/tEkkUqz.jpg" style="height: 339.57px; width: 255px" alt="team">
-				 <div class="des">
-				 	Aditya Khandkar
-				 </div>
+				<a href="https://www.linkedin.com/in/aditya-khandkar-82135271/">
+					 <div class="des">
+						Aditya Khandkar
+					 </div>
+				</a>
 				<span class="text-muted">Full Stack Developer</span>
 			</div>
 		</div>
 	</div>
 </div>
-
-	<div class="support" id="support">
-		<div class="container">
-			<h1 class="text-center">- Support -</h1>
-				<div class="row">
-					<div class="col-lg-4 col-md-4 col-sm-12">
-						<h1>STUFF HERE</h1>
-					</div>
-				</div>
-		</div>
-	</div>
 
 
 	<div class="contact-form" id="contact">
