more website stuff

--- a/wisharebootstrap/index.html
+++ b/wisharebootstrap/index.html
@@ -146,6 +146,11 @@
 				</a>
 				<span class="text-muted">Full Stack Developer</span>
 			</div>
+			<div style="margin: 0 auto">
+				<a href="https://github.com/josephvu519/wifi_project" style="text-decoration-color: #1A964E">
+					<h1 style="color: #808080">View our project</h1>
+				</a>
+			</div>
 		</div>
 	</div>
 </div>
