--- a/wisharebootstrap/index.html
+++ b/wisharebootstrap/index.html
@@ -2,42 +2,42 @@
 <html lang="en">
 <head>
 	<title>WiShare</title>
-      <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-      <link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg fixed-top ">
-	  <a class="navbar-brand" href="#">WiShare</a>
-	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-	    <span class="navbar-toggler-icon"></span>
-	  </button>
+<nav class="navbar navbar-expand-lg fixed-top ">
+	<a class="navbar-brand" href="#">WiShare</a>
+	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+	</button>
 
-	  <div class="collapse navbar-collapse " id="navbarSupportedContent">
-	    <ul class="navbar-nav mr-4">
-	      
-	      <li class="nav-item">
-	        <a class="nav-link" data-value="about" href="#">About</a>
-	      </li>
-	      <li class="nav-item">
-	        <a class="nav-link " data-value="try" href="#">Try it</a>
-	      </li>
+	<div class="collapse navbar-collapse " id="navbarSupportedContent">
+		<ul class="navbar-nav mr-4">
+
+			<li class="nav-item">
+				<a class="nav-link" data-value="about" href="#">About</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link " data-value="try" href="#">Try it</a>
+			</li>
 			<li class="nav-item">
 				<a class="nav-link " data-value="support" href="#">Support</a>
 			</li>
-	      <li class="nav-item">
-	        <a class="nav-link " data-value="docs" href="#">Documentation</a>
-	      </li>
-	      <li class="nav-item">
-	        <a class="nav-link " data-value="team" href="#">Meet us</a>
-	      </li>
+			<li class="nav-item">
+				<a class="nav-link " data-value="docs" href="#">Documentation</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link " data-value="team" href="#">Meet us</a>
+			</li>
 
 			<li class="nav-item">
 				<a class="nav-link " data-value="contact" href="#">Contact Us</a>
 			</li>
-	    </ul>
-	    
-	  </div>
+		</ul>
+
+	</div>
 </nav>
 
 <header class="header">
@@ -55,52 +55,67 @@
 				</div>
 			</div>
 		</div>
-</header>
+	</header>
 
-<div class="about" id="about">
-	<div class="container">
-	  <h1 class="text-center">- About -</h1>
-		<div class="row" style="height: 350px">
-			<div style="border-radius: 50%; background-color: #4c4c4c; margin: 0 auto; width: 340px">
-				<img src="https://i.imgur.com/OXlMnRp.png" style="width: 300px; height: 300px; padding-top: 45px; padding-left: 45px">
-			</div>
-			<div class="col-lg-8 col-md-8 col-sm-12 desc">
-				<h3>At Wishare, our goal is to make the process of connecting to WiFi as simple as possible.
-					We developed WiShare to fix an issue that many of us run into on a regular basis: You invite a friend over, and the first thing they ask you is,
-					"What's the WiFi password?". With WiShare, you won't have to break out the piece of paper with the 35 digit long password,
-					now you can just send your friend a simple invite and they can connect without a hitch.</h3>
+	<div class="about" id="about">
+		<div class="container">
+			<h1 class="text-center">- About -</h1>
+			<div class="row" style="height: 350px">
+				<div style="border-radius: 50%; background-color: #4c4c4c; margin: 0 auto; width: 340px">
+					<img src="https://i.imgur.com/OXlMnRp.png" style="width: 300px; height: 300px; padding-top: 45px; padding-left: 45px">
+				</div>
+				<div class="col-lg-8 col-md-8 col-sm-12 desc">
+					<h3>At Wishare, our goal is to make the process of connecting to WiFi as simple as possible.
+						We developed WiShare to fix an issue that many of us run into on a regular basis: You invite a friend over, and the first thing they ask you is,
+						"What's the WiFi password?". With WiShare, you won't have to break out the piece of paper with the 35 digit long password,
+						now you can just send your friend a simple invite and they can connect without a hitch.</h3>
+				</div>
 			</div>
 		</div>
 	</div>
-</div>
 
-<div class="try" id="try">
-	<div class="container" style="padding-top: 100px">
-		<h1 class="text-center">- Try it -</h1>
-		<h3 style="padding-top: 50px">
-			WiShare is an android application,
-			you can download it now on the Google Play Store
-		</h3>
-		<h2>LINK HERE</h2>
+	<div class="try" id="try">
+		<div class="container" style="padding-top: 100px">
+			<h1 class="text-center">- Try it -</h1>
+			<h3 style="padding-top: 50px">
+				WiShare is an android application,
+				you can download it now on the Google Play Store
+			</h3>
+			<h2>LINK HERE</h2>
+		</div>
 	</div>
-</div>
 
 
-<div class="support" id="support">
-	<div class="container" style="padding-top: 100px">
-		<h1 class="text-center">- Support -</h1>
+	<div class="support" id="support">
+		<div class="container" style="padding-top: 100px">
+			<h1 class="text-center">- Support -</h1>
 			<div class="col-lg-4 col-md-4 col-sm-12">
 				<h1>STUFF HERE</h1>
+			</div>
 		</div>
 	</div>
-</div>
 
 	<div class="docs" id="docs">
 		<div class="container" style="padding-top: 20px">
 			<h1 class="text-center">- Documentation -</h1>
-			<div class="row">
-				<div class="container">
-					<img src="https://i.imgur.com/oVc8NSd.png" data-toggle="modal" data-target="#myModal" style="height: 200px; width: 200px">
+			<h3 class="text-center" style="color: #808080">Phase 0</h3>
+			<div class="row" style="padding-top: 30px">
+			<div class="col-lg-3 col-md-3 col-sm-12" style="margin: 0 auto">
+				<img src="https://i.imgur.com/O9Ny0Yo.png" data-toggle="modal" data-target="#myModal5" style="height: 250px; width: 250px" class="thumbnail">
+				<div class="modal" id="myModal5">
+					<div class="modal-dialog">
+						<div class="modal-content">
+							<img src="https://i.imgur.com/O9Ny0Yo.png" style="height: fit-content; width: fit-content">
+						</div>
+					</div>
+				</div>
+				<span class="text-muted" style="font-size: 14pt">High Level Requirements</span>
+			</div>
+			</div>
+			<h3 class="text-center" style="color: #808080; padding-top: 50px">Phase 1</h3>
+			<div class="row" style="padding-top: 30px">
+				<div class="col-lg-3 col-md-3 col-sm-12 item">
+					<img src="https://i.imgur.com/oVc8NSd.png" data-toggle="modal" data-target="#myModal" style="height: 250px; width: 250px" class="thumbnail">
 					<div class="modal" id="myModal">
 						<div class="modal-dialog">
 							<div class="modal-content">
@@ -108,135 +123,126 @@
 							</div>
 						</div>
 					</div>
-					<img src="https://i.imgur.com/oVc8NSd.png" data-toggle="modal" data-target="#myModal2" style="height: 200px; width: 200px">
+					<span class="text-muted" style="font-size: 14pt">Domain Model</span>
+				</div>
+				<div class="col-lg-3 col-md-3 col-sm-12 item">
+					<img src="https://i.imgur.com/WMuo7KL.png" data-toggle="modal" data-target="#myModal2" style="height: 250px; width: 250px" class="thumbnail">
 					<div class="modal" id="myModal2">
-						<div class="modal-dialog">
-							<div class="modal-content">
-								<img src="https://i.imgur.com/oVc8NSd.png" style="height: fit-content; width: fit-content">
+						<div class="modal-dialog" style="height: fit-content; width: fit-content; margin: 0 auto">
+							<div class="modal-content" style="height: fit-content; width: fit-content; margin: 0 auto">
+								<img src="https://i.imgur.com/WMuo7KL.png" style="height: fit-content; width: fit-content; margin: 0 auto">
 							</div>
 						</div>
 					</div>
-					<img src="https://i.imgur.com/oVc8NSd.png" data-toggle="modal" data-target="#myModal3" style="height: 200px; width: 200px">
-					<div class="modal" id="myModal3">
+					<span class="text-muted" style="font-size: 14pt">Use Case Diagram</span>
+				</div>
+				<div class="col-lg-3 col-md-3 col-sm-12 item">
+					<img src="https://i.imgur.com/cn6DMTF.png" data-toggle="modal" data-target="#myModal3" style="height: 250px; width: 250px" class="thumbnail">
+					<div class="modal" id="myModal3" style="margin: 0 auto">
 						<div class="modal-dialog">
 							<div class="modal-content">
-								<span style="height: fit-content; width: 500px">
-									APP - WiShare
-									CLIENT USER - Invited by the host user to join their network
-									CLIENT DEVICE - the device belonging to the client user
-									CONFIGURED NETWORK LIST - list of network configurations stored on the host device
-									CONTACT - methods of communication for a person that is stored for easier access
-									CONTACT LIST - May contain multiple contacts. Needs permission to be accessed
-									CREDENTIALS - network name and password
-									DATA LIMIT - A limit set by the host of how much data the client can use on the network
-									DEVICE - A device with network access. Can be a client device, host device, or both.
-									FIREBASE SERVER - The server forwards messages between the client and host devices
-									GOOGLE SERVER - Creates a token for new users
-									HOST DEVICE - the device belonging to the host user
-									HOST USER - the user responsible for adding new network configurations. Invites client users onto their configured networks.
-									INIVITATION - A single time invitation or permanent invitation
-									NETWORK CONFIGURATION - connection information and credentials
-									OPTIONS - Ability for host to set parameters for their invites to the client
-									PASSWORD - the password of the network
-									PERMANENT INVITATION - Host user gives client user unlimited access to the network
-									POSTGRES DATABASE - Stores user’s tokens, phone numbers and other device information.
-									PHONE NUMBER - Phone number of the device
-									PROXIMITY - Relative distance of the client’s device to the network
-									TIME LIMIT - A limit set by the host of how long the client can stay connected to the network
-									TOKEN - A unique identifier used by the firebase server to identify a device
-									SINGLE TIME INVITATION - Host user gives client user one time access to the network
-									SQLITE DATABASE - A database specific for each device. Stores contact information, token information, and network configurations.
-									USER - A client user or host user that uses WiShare
-									WIFI/NETWORK - Wireless internet
-								</span>
+								<img src="https://i.imgur.com/cn6DMTF.png" style="height: fit-content; width: fit-content; margin: 0 auto">
 							</div>
 						</div>
 					</div>
-					<h2>stuff here</h2>
+					<span class="text-muted" style="font-size: 14pt">Storyboard</span>
+				</div>
+				<div class="col-lg-3 col-md-3 col-sm-12 item">
+					<img src="https://i.imgur.com/WMuo7KL.png" data-toggle="modal" data-target="#myModal4" style="height: 250px; width: 250px" class="thumbnail">
+					<div class="modal" id="myModal4">
+						<div class="modal-dialog" style="height: fit-content; width: fit-content; margin: 0 auto">
+							<div class="modal-content; row" style="height: fit-content; width: fit-content; margin: 0 auto">
+								<div class="horizontal">
+								<img src="https://i.imgur.com/fQhGFxO.png" style="height: fit-content; width: 650px; margin: 0 auto">
+								<img src="https://i.imgur.com/yiwbsPK.png" style="height: fit-content; width: 650px; margin: 0 auto">
+								</div>
+							</div>
+						</div>
+					</div>
+					<span class="text-muted" style="font-size: 14pt">Use Case Text/High Level Requirements</span>
 				</div>
 			</div>
-		</div>
 
-<!-- Team section -->
-<div class="team" id="team">
-	<div class="container" style="padding-top: 20px">
-	   <h1 class="text-center">- Our Team -</h1>
-		<div class="row">
-			<div class="col-lg-3 col-md-3 col-sm-12 item">
-				<img src="https://i.imgur.com/jSexjnI.jpg" class="img-fluid" alt="team">
-				<a href="https://www.linkedin.com/in/jacob-fullmer">
-					<div class="des">
-						Jacob Fullmer
-					 </div>
-				</a>
-				<span class="text-muted">Lead UI Developer</span>
-			</div>
-			<div class="col-lg-3 col-md-3 col-sm-12 item">
-				<img src="https://i.imgur.com/sZEv0fg.jpg" style="height: 339.57px; width: 255px" alt="team">
-				<a href="https://github.com/pratted">
-					<div class="des">
-						 Eric Pratt
-					 </div>
-				</a>
-				<span class="text-muted">Lead Server Developer</span>
-			</div>
-			<div class="col-lg-3 col-md-3 col-sm-12 item">
-				<img src="https://i.imgur.com/fjOqzng.jpg" style="height: 339.57px; width: 255px" alt="team">
-				<a href="https://www.linkedin.com/in/joseph-vu-74a1ba169/">
-					<div class="des">
-						Joseph Vu
-					 </div>
-				</a>
-				<span class="text-muted">Lead SQL Developer</span>
-			</div>
-			<div class="col-lg-3 col-md-3 col-sm-12 item">
-				<img src="https://i.imgur.com/tEkkUqz.jpg" style="height: 339.57px; width: 255px" alt="team">
-				<a href="https://www.linkedin.com/in/aditya-khandkar-82135271/">
-					 <div class="des">
-						Aditya Khandkar
-					 </div>
-				</a>
-				<span class="text-muted">Full Stack Developer</span>
-			</div>
-			<div style="margin: 0 auto">
-				<a href="https://github.com/josephvu519/wifi_project" style="text-decoration-color: #1A964E">
-					<h1 style="color: #808080">View our project</h1>
-				</a>
-			</div>
-		</div>
-	</div>
-</div>
-
-
-	<div class="contact-form" id="contact">
-		<div class="container">
-			<form>
-				<div class="row">
-					<div class="col-lg-4 col-md-4 col-sm-12">
-						<h1>Get in Touch</h1>
+			<!-- Team section -->
+			<div class="team" id="team">
+				<div class="container" style="padding-top: 20px">
+					<h1 class="text-center">- Our Team -</h1>
+					<div class="row">
+						<div class="col-lg-3 col-md-3 col-sm-12 item">
+							<img src="https://i.imgur.com/jSexjnI.jpg" style="height: 339.57px; width: 255px" alt="team">
+							<a href="https://www.linkedin.com/in/jacob-fullmer">
+								<div class="des">
+									Jacob Fullmer
+								</div>
+							</a>
+							<span class="text-muted">Lead UI Developer</span>
+						</div>
+						<div class="col-lg-3 col-md-3 col-sm-12 item">
+							<img src="https://i.imgur.com/sZEv0fg.jpg" style="height: 339.57px; width: 255px" alt="team">
+							<a href="https://github.com/pratted">
+								<div class="des">
+									Eric Pratt
+								</div>
+							</a>
+							<span class="text-muted">Lead Server Developer</span>
+						</div>
+						<div class="col-lg-3 col-md-3 col-sm-12 item">
+							<img src="https://i.imgur.com/fjOqzng.jpg" style="height: 339.57px; width: 255px" alt="team">
+							<a href="https://www.linkedin.com/in/joseph-vu-74a1ba169/">
+								<div class="des">
+									Joseph Vu
+								</div>
+							</a>
+							<span class="text-muted">Lead SQL Developer</span>
+						</div>
+						<div class="col-lg-3 col-md-3 col-sm-12 item">
+							<img src="https://i.imgur.com/tEkkUqz.jpg" style="height: 339.57px; width: 255px" alt="team">
+							<a href="https://www.linkedin.com/in/aditya-khandkar-82135271/">
+								<div class="des">
+									Aditya Khandkar
+								</div>
+							</a>
+							<span class="text-muted">Full Stack Developer</span>
+						</div>
+						<div style="margin: 0 auto">
+							<a href="https://github.com/josephvu519/wifi_project" style="text-decoration-color: #1A964E">
+								<h1 style="color: #808080">View our project</h1>
+							</a>
+						</div>
 					</div>
-					<div class="col-lg-8 col-md-8 col-sm-12 right">
-						<div class="form-group">
-							<input type="text" class="form-control form-control-lg" placeholder="Your Name" name="">
-						</div>
-						<div class="form-group">
-							<input type="email" class="form-control form-control-lg" placeholder="YourEmail@email.com" name="email">
-						</div>
-						<div class="form-group">
+				</div>
+			</div>
+
+
+			<div class="contact-form" id="contact">
+				<div class="container">
+					<form>
+						<div class="row">
+							<div class="col-lg-4 col-md-4 col-sm-12">
+								<h1>Get in Touch</h1>
+							</div>
+							<div class="col-lg-8 col-md-8 col-sm-12 right">
+								<div class="form-group">
+									<input type="text" class="form-control form-control-lg" placeholder="Your Name" name="">
+								</div>
+								<div class="form-group">
+									<input type="email" class="form-control form-control-lg" placeholder="YourEmail@email.com" name="email">
+								</div>
+								<div class="form-group">
 						 <textarea class="form-control form-control-lg">
 
 						 </textarea>
+								</div>
+								<input type="submit" class="btn btn-secondary btn-block" value="Send" name="">
+							</div>
 						</div>
-						<input type="submit" class="btn btn-secondary btn-block" value="Send" name="">
-					</div>
+					</form>
 				</div>
-			</form>
-		</div>
-	</div>
-<!-- add Javasscript file from js file -->
-<script type="text/javascript" src="js/jquery.min.js"></script>
-<script type="text/javascript" src="js/bootstrap.min.js"></script>
-<script type="text/javascript" src='js/main.js'></script>
+			</div>
+			<!-- add Javasscript file from js file -->
+			<script type="text/javascript" src="js/jquery.min.js"></script>
+			<script type="text/javascript" src="js/bootstrap.min.js"></script>
+			<script type="text/javascript" src='js/main.js'></script>
 
 </body>
 </html>
