Phase 2 added to website

--- a/wisharebootstrap/index.html
+++ b/wisharebootstrap/index.html
@@ -98,8 +98,8 @@
 	<div class="docs" id="docs">
 		<div class="container" style="padding-top: 20px">
 			<h1 class="text-center">- Documentation -</h1>
-			<h3 class="text-center" style="color: #808080">Phase 0</h3>
-			<div class="row" style="padding-top: 30px">
+			<h2 class="text-center" style="color: #808080">Phase 0</h2>
+			<div class="row">
 			<div class="col-lg-3 col-md-3 col-sm-12" style="margin: 0 auto">
 				<img src="https://i.imgur.com/O9Ny0Yo.png" data-toggle="modal" data-target="#myModal5" style="height: 250px; width: 250px" class="thumbnail">
 				<div class="modal" id="myModal5">
@@ -109,11 +109,11 @@
 						</div>
 					</div>
 				</div>
-				<span class="text-muted" style="font-size: 14pt">High Level Requirements</span>
+				<span class="text-muted" style="font-size: 14pt">Project Glossary</span>
 			</div>
 			</div>
-			<h3 class="text-center" style="color: #808080; padding-top: 50px">Phase 1</h3>
-			<div class="row" style="padding-top: 30px">
+			<h2 class="text-center" style="color: #808080">Phase 1</h2>
+			<div class="row">
 				<div class="col-lg-3 col-md-3 col-sm-12 item">
 					<img src="https://i.imgur.com/oVc8NSd.png" data-toggle="modal" data-target="#myModal" style="height: 250px; width: 250px" class="thumbnail">
 					<div class="modal" id="myModal">
@@ -162,6 +162,116 @@
 					<span class="text-muted" style="font-size: 14pt">Use Case Text/High Level Requirements</span>
 				</div>
 			</div>
+			<h2 class="text-center" style="color: #808080">Phase 2</h2>
+			<h3 class="text-center" style="color: #808080">Robustness Diagrams</h3>
+			<div class="row" style="padding-top: 20px">
+				<div class="col-lg-3 col-md-3 col-sm-12">
+					<img src="https://i.imgur.com/axMBy3g.png" data-toggle="modal" data-target="#myModal6" style="height: 250px; width: 250px" class="thumbnail">
+					<div class="modal" id="myModal6">
+						<div class="modal-dialog">
+							<div class="modal-content">
+								<img src="https://i.imgur.com/axMBy3g.png" style="height: fit-content; width: fit-content">
+							</div>
+						</div>
+					</div>
+					<span class="text-muted" style="font-size: 14pt">Host Adds Network</span>
+				</div>
+				<div class="col-lg-3 col-md-3 col-sm-12">
+					<img src="https://i.imgur.com/y47QLsP.png" data-toggle="modal" data-target="#myModal7" style="height: 250px; width: 250px" class="thumbnail">
+					<div class="modal" id="myModal7">
+						<div class="modal-dialog">
+							<div class="modal-content">
+								<img src="https://i.imgur.com/y47QLsP.png" style="height: fit-content; width: fit-content">
+							</div>
+						</div>
+					</div>
+					<span class="text-muted" style="font-size: 14pt">Host Invites Client</span>
+				</div>
+				<div class="col-lg-3 col-md-3 col-sm-12">
+					<img src="https://i.imgur.com/BztCGSP.png" data-toggle="modal" data-target="#myModal8" style="height: 250px; width: 250px	" class="thumbnail">
+					<div class="modal" id="myModal8">
+						<div class="modal-dialog">
+							<div class="modal-content">
+								<img src="https://i.imgur.com/BztCGSP.png" style="height: fit-content; width: fit-content">
+							</div>
+						</div>
+					</div>
+					<span class="text-muted" style="font-size: 14pt">Client Receives Invitation</span>
+				</div>
+				<div class="col-lg-3 col-md-3 col-sm-12">
+					<img src="https://i.imgur.com/doEe5l6.png" data-toggle="modal" data-target="#myModal9" style="height: 250px; width: 250px" class="thumbnail">
+					<div class="modal" id="myModal9">
+						<div class="modal-dialog">
+							<div class="modal-content">
+								<img src="https://i.imgur.com/doEe5l6.png" style="height: fit-content; width: fit-content">
+							</div>
+						</div>
+					</div>
+					<span class="text-muted" style="font-size: 14pt">Host Revokes Client</span>
+				</div>
+			</div>
+			<h3 class="text-center" style="color: #808080; padding-top: 40px">Sequence Diagrams</h3>
+			<div class="row" style="padding-top: 20px">
+				<div class="col-lg-3 col-md-3 col-sm-12">
+					<img src="https://i.imgur.com/WkOfFlY.png" data-toggle="modal" data-target="#myModal10" style="height: 250px; width: 250px" class="thumbnail">
+					<div class="modal" id="myModal10">
+						<div class="modal-dialog">
+							<div class="modal-content">
+								<img src="https://i.imgur.com/WkOfFlY.png" style="height: fit-content; width: fit-content">
+							</div>
+						</div>
+					</div>
+					<span class="text-muted" style="font-size: 14pt">Host Adds Network</span>
+				</div>
+				<div class="col-lg-3 col-md-3 col-sm-12">
+					<img src="https://i.imgur.com/6r3suDj.png" data-toggle="modal" data-target="#myModal11" style="height: 250px; width: 250px" class="thumbnail">
+					<div class="modal" id="myModal11">
+						<div class="modal-dialog">
+							<div class="modal-content">
+								<img src="https://i.imgur.com/6r3suDj.png" style="height: fit-content; width: fit-content">
+							</div>
+						</div>
+					</div>
+					<span class="text-muted" style="font-size: 14pt">Host Invites Client</span>
+				</div>
+				<div class="col-lg-3 col-md-3 col-sm-12">
+					<img src="https://i.imgur.com/INa4KvE.png" data-toggle="modal" data-target="#myModal12" style="height: 250px; width: 250px" class="thumbnail">
+					<div class="modal" id="myModal12">
+						<div class="modal-dialog">
+							<div class="modal-content">
+								<img src="https://i.imgur.com/INa4KvE.png" style="height: fit-content; width: fit-content">
+							</div>
+						</div>
+					</div>
+					<span class="text-muted" style="font-size: 14pt">Client Receives Invitation</span>
+				</div>
+				<div class="col-lg-3 col-md-3 col-sm-12">
+					<img src="https://i.imgur.com/AULJJbt.png" data-toggle="modal" data-target="#myModal13" style="height: 250px; width: 250px" class="thumbnail">
+					<div class="modal" id="myModal13">
+						<div class="modal-dialog">
+							<div class="modal-content">
+								<img src="https://i.imgur.com/AULJJbt.png" style="height: fit-content; width: fit-content">
+							</div>
+						</div>
+					</div>
+					<span class="text-muted" style="font-size: 14pt">Host Revokes Client</span>
+				</div>
+			</div>
+			<h3 class="text-center" style="color: #808080; padding-top: 40px">Class Diagram</h3>
+			<div class="row" style="padding-top: 20px;">
+				<div class="col-lg-3 col-md-3 col-sm-12" style="margin: 0 auto">
+					<img src="https://i.imgur.com/73vc9Xm.png" data-toggle="modal" data-target="#myModal14" style="height: 250px; width: 250px" class="thumbnail">
+					<div class="modal" id="myModal14">
+						<div class="modal-dialog">
+							<div class="modal-content">
+								<img src="https://i.imgur.com/73vc9Xm.png" style="height: fit-content; width: fit-content">
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 
 			<!-- Team section -->
 			<div class="team" id="team">
