--- a/wisharebootstrap/index.html
+++ b/wisharebootstrap/index.html
@@ -42,8 +42,7 @@
 
 <header class="header">
 	<header class="header">
-		<div class="overlay"></div>
-		<div class="container" style="padding-top: 400px">
+		<div class="container" style="padding-top: 200px">
 			<div class="row">
 				<div class="col-lg-4 col-md-4 col-sm-12" id="welcome" style="text-align: center; vertical-align: middle">
 					<h1>Welcome to WiShare</h1>
@@ -326,24 +325,22 @@
 
 			<div class="contact-form" id="contact">
 				<div class="container">
-					<form>
+					<form method="POST" action="https://formspree.io/jacobfullmer12@gmail.com">
 						<div class="row">
 							<div class="col-lg-4 col-md-4 col-sm-12">
 								<h1>Get in Touch</h1>
 							</div>
 							<div class="col-lg-8 col-md-8 col-sm-12 right">
 								<div class="form-group">
-									<input type="text" class="form-control form-control-lg" placeholder="Your Name" name="">
+									<input type="text" class="form-control form-control-lg" placeholder="Your Name" name="name">
 								</div>
 								<div class="form-group">
 									<input type="email" class="form-control form-control-lg" placeholder="YourEmail@email.com" name="email">
 								</div>
 								<div class="form-group">
-						 <textarea class="form-control form-control-lg">
-
-						 </textarea>
+						 			<textarea class="form-control form-control-lg" name="message"></textarea>
 								</div>
-								<input type="submit" class="btn btn-secondary btn-block" value="Send" name="">
+								<input type="submit" class="btn btn-secondary btn-block" value="Send">
 							</div>
 						</div>
 					</form>
