Fixed modal images

--- a/wisharebootstrap/index.html
+++ b/wisharebootstrap/index.html
@@ -104,7 +104,7 @@
 				<div class="modal" id="myModal5">
 					<div class="modal-dialog">
 						<div class="modal-content">
-							<img src="https://i.imgur.com/O9Ny0Yo.png" style="height: fit-content; width: fit-content">
+							<img src="https://i.imgur.com/O9Ny0Yo.png" style="height: fit-content; width: fit-content" class="img-responsive">
 						</div>
 					</div>
 				</div>
@@ -118,7 +118,7 @@
 					<div class="modal" id="myModal">
 						<div class="modal-dialog">
 							<div class="modal-content">
-								<img src="https://i.imgur.com/oVc8NSd.png" style="height: fit-content; width: fit-content">
+								<img src="https://i.imgur.com/oVc8NSd.png" style="height: fit-content; width: fit-content" class="img-responsive">
 							</div>
 						</div>
 					</div>
@@ -127,9 +127,9 @@
 				<div class="col-lg-3 col-md-3 col-sm-12 item">
 					<img src="https://i.imgur.com/WMuo7KL.png" data-toggle="modal" data-target="#myModal2" style="height: 250px; width: 250px" class="thumbnail">
 					<div class="modal" id="myModal2">
-						<div class="modal-dialog" style="height: fit-content; width: fit-content; margin: 0 auto">
-							<div class="modal-content" style="height: fit-content; width: fit-content; margin: 0 auto">
-								<img src="https://i.imgur.com/WMuo7KL.png" style="height: fit-content; width: fit-content; margin: 0 auto">
+						<div class="modal-dialog">
+							<div class="modal-content">
+								<img src="https://i.imgur.com/WMuo7KL.png" style="height: fit-content; width: fit-content" class="img-responsive">
 							</div>
 						</div>
 					</div>
@@ -140,7 +140,7 @@
 					<div class="modal" id="myModal3" style="margin: 0 auto">
 						<div class="modal-dialog">
 							<div class="modal-content">
-								<img src="https://i.imgur.com/cn6DMTF.png" style="height: fit-content; width: fit-content; margin: 0 auto">
+								<img src="https://i.imgur.com/cn6DMTF.png" style="height: fit-content; width: fit-content; margin: 0 auto" class="img-responsive">
 							</div>
 						</div>
 					</div>
@@ -152,8 +152,8 @@
 						<div class="modal-dialog" style="height: fit-content; width: fit-content; margin: 0 auto">
 							<div class="modal-content; row" style="height: fit-content; width: fit-content; margin: 0 auto">
 								<div class="horizontal">
-								<img src="https://i.imgur.com/fQhGFxO.png" style="height: fit-content; width: 650px; margin: 0 auto">
-								<img src="https://i.imgur.com/yiwbsPK.png" style="height: fit-content; width: 650px; margin: 0 auto">
+								<img src="https://i.imgur.com/fQhGFxO.png" style="height: fit-content; width: 650px; margin: 0 auto" class="img-responsive">
+								<img src="https://i.imgur.com/yiwbsPK.png" style="height: fit-content; width: 650px; margin: 0 auto" class="img-responsive">
 								</div>
 							</div>
 						</div>
@@ -169,7 +169,7 @@
 					<div class="modal" id="myModal6">
 						<div class="modal-dialog">
 							<div class="modal-content">
-								<img src="https://i.imgur.com/axMBy3g.png" style="height: fit-content; width: fit-content">
+								<img src="https://i.imgur.com/axMBy3g.png" style="height: fit-content; width: fit-content" class="img-responsive">
 							</div>
 						</div>
 					</div>
@@ -180,7 +180,7 @@
 					<div class="modal" id="myModal7">
 						<div class="modal-dialog">
 							<div class="modal-content">
-								<img src="https://i.imgur.com/y47QLsP.png" style="height: fit-content; width: fit-content">
+								<img src="https://i.imgur.com/y47QLsP.png" style="height: fit-content; width: fit-content" class="img-responsive">
 							</div>
 						</div>
 					</div>
@@ -191,7 +191,7 @@
 					<div class="modal" id="myModal8">
 						<div class="modal-dialog">
 							<div class="modal-content">
-								<img src="https://i.imgur.com/BztCGSP.png" style="height: fit-content; width: fit-content">
+								<img src="https://i.imgur.com/BztCGSP.png" style="height: fit-content; width: fit-content" class="img-responsive">
 							</div>
 						</div>
 					</div>
@@ -202,7 +202,7 @@
 					<div class="modal" id="myModal9">
 						<div class="modal-dialog">
 							<div class="modal-content">
-								<img src="https://i.imgur.com/doEe5l6.png" style="height: fit-content; width: fit-content">
+								<img src="https://i.imgur.com/doEe5l6.png" style="height: fit-content; width: fit-content" class="img-responsive">
 							</div>
 						</div>
 					</div>
@@ -216,7 +216,7 @@
 					<div class="modal" id="myModal10">
 						<div class="modal-dialog">
 							<div class="modal-content">
-								<img src="https://i.imgur.com/WkOfFlY.png" style="height: fit-content; width: fit-content">
+								<img src="https://i.imgur.com/WkOfFlY.png" style="height: fit-content; width: fit-content" class="img-responsive">
 							</div>
 						</div>
 					</div>
@@ -227,7 +227,7 @@
 					<div class="modal" id="myModal11">
 						<div class="modal-dialog">
 							<div class="modal-content">
-								<img src="https://i.imgur.com/6r3suDj.png" style="height: fit-content; width: fit-content">
+								<img src="https://i.imgur.com/6r3suDj.png" style="height: fit-content; width: fit-content" class="img-responsive">
 							</div>
 						</div>
 					</div>
@@ -238,7 +238,7 @@
 					<div class="modal" id="myModal12">
 						<div class="modal-dialog">
 							<div class="modal-content">
-								<img src="https://i.imgur.com/INa4KvE.png" style="height: fit-content; width: fit-content">
+								<img src="https://i.imgur.com/INa4KvE.png" style="height: fit-content; width: fit-content" class="img-responsive">
 							</div>
 						</div>
 					</div>
@@ -249,7 +249,7 @@
 					<div class="modal" id="myModal13">
 						<div class="modal-dialog">
 							<div class="modal-content">
-								<img src="https://i.imgur.com/AULJJbt.png" style="height: fit-content; width: fit-content">
+								<img src="https://i.imgur.com/AULJJbt.png" style="height: fit-content; width: fit-content" class="img-responsive">
 							</div>
 						</div>
 					</div>
@@ -261,9 +261,9 @@
 				<div class="col-lg-3 col-md-3 col-sm-12" style="margin: 0 auto">
 					<img src="https://i.imgur.com/73vc9Xm.png" data-toggle="modal" data-target="#myModal14" style="height: 250px; width: 250px" class="thumbnail">
 					<div class="modal" id="myModal14">
-						<div class="modal-dialog">
+						<div class="modal-dialog modal-dialog-centered">
 							<div class="modal-content">
-								<img src="https://i.imgur.com/73vc9Xm.png" style="height: fit-content; width: fit-content">
+								<img src="https://i.imgur.com/73vc9Xm.png" style="height: fit-content; width: fit-content" class="img-responsive">
 							</div>
 						</div>
 					</div>
