Added phase 3 to website

--- a/wisharebootstrap/index.html
+++ b/wisharebootstrap/index.html
@@ -269,6 +269,31 @@
 					</div>
 				</div>
 			</div>
+			<h2 class="text-center" style="color: #808080; padding-top: 10px">Phase 3</h2>
+			<div class="row" style="padding-top: 20px; justify-content: center">
+				<div class="col-lg-3 col-md-3 col-sm-12">
+					<img src="https://i.imgur.com/4rKX2xO.png" data-toggle="modal" data-target="#myModal15" style="height: 250px; width: 250px" class="thumbnail">
+					<div class="modal" id="myModal15">
+						<div class="modal-dialog modal-dialog-centered">
+							<div class="modal-content">
+								<img src="https://i.imgur.com/4rKX2xO.png" style="height: fit-content; width: fit-content" class="img-responsive">
+							</div>
+						</div>
+					</div>
+					<span class="text-muted" style="font-size: 14pt">Development Plan</span>
+				</div>
+				<div class="col-lg-3 col-md-3 col-sm-12">
+					<img src="https://i.imgur.com/cy1QJ8s.png" data-toggle="modal" data-target="#myModal16" style="height: 250px; width: 250px" class="thumbnail">
+					<div class="modal" id="myModal16">
+						<div class="modal-dialog modal-dialog-centered">
+							<div class="modal-content">
+								<img src="https://i.imgur.com/cy1QJ8s.png" style="height: fit-content; width: fit-content" class="img-responsive">
+							</div>
+						</div>
+					</div>
+					<span class="text-muted" style="font-size: 14pt">Gantt Chart</span>
+				</div>
+			</div>
 		</div>
 	</div>
 
